# cli-python

./: .gitignore  README.md  pyproject.toml
infra_cli/: cli.py  generator.py
infra_cli/templates/k8s/app-basic/: deployment.yaml.j2  service.yaml.j2  template.json
